--- a/Floride.html
+++ b/Floride.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Floride</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/style.responsive.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
+
 <body style="background-color: #f8f9fa;">
     <header class="hide">
         <nav>
@@ -29,118 +33,91 @@
 
     <main>
         <div class="vignette hide"></div>
-        <img src="img/backgroundFilterMiami.png" data-distance="-200" data-speedx="0.3" data-speedy="0.38" data-speedz="0" data-rotation="0" class="parallax backgroundFilterMiami">
+        <img src="img/Miami/backgroundFilterMiami.png" data-distance="-200" data-speedx="0.3" data-speedy="0.38"
+            data-speedz="0" data-rotation="0" class="parallax backgroundFilterMiami">
         <div class="text parallax" data-speedx="0.25" data-speedy="0.33" data-speedz="0.1" data-rotation="0.15">
             <h2>Floride</h2>
             <h1 class="city">Miami</h1>
         </div>
-        <img src="img/miamiBgFilter.png" data-distance="-200" data-speedx="0.2" data-speedy="0.28" data-speedz="0.2" data-rotation="0.2" class="parallax miamiBgFilter">
+        <img src="img/Miami/miamiBgFilter.png" data-distance="-200" data-speedx="0.2" data-speedy="0.28"
+            data-speedz="0.2" data-rotation="0.2" class="parallax miamiBgFilter">
     </main>
-    <div class="main-content">
-        <div class="row d-flex justify-content-center text-center">
-            <h1 class="title">Miami et sa richesse culturelle incomparable !</h1>
-            <p class="iconP">
-                <img src="img/etats-unis.png" alt="Drapeau USA" class="iconTitle">
-            </p>
-        </div>
-        <div class="container">
-            <div class="row allData">
-                <div class="col-xs-12 col-md-5 meteo">
-                    <div class="row firstPartMeteo">
-                        <div class="col">
-                            <h2 class="d-flex flex-column">
-                                <span class="cityMeteo"></span>
-                                <small class="d-flex align-items-center"><div id="iconDay"><img id="wicon" src="" alt="Weather icon"></div><span class="weather-description"></span></small>
-                            </h2>
-                        </div>
-                        <div class="col">
-                            <div class="h1 temperature">
-                                <span class="current-temp"></span>
-                                <small>
-                                    <img src="img/svg/arrow-down-solid.svg" alt="">
-                                    <span class="min-temp"></span>
-                                    <span class="separateur"> | </span>
-                                    <span class="max-temp"></span>
-                                    <img src="img/svg/arrow-up-solid.svg" alt="">
-                                </small>
+    <div class="mini-card">
+        <div class="container allData">
+            <div class="row">
+                <div class="col-md-3 data" data-aos="fade-up" data-aos-duration="800">
+                    <div class="card">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Localisation</p>
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">Floride, État-Unis
+                                    </h5>
+                                </div>
+                                <div class="col-4 d-flex justify-content-end">
+                                    <div class="boxIcon">
+                                        <img src="img/svg/globe-americas.svg">
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                        <hr>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <ul class="prevMeteo">
-                                <!-- Structure ajoutée en JS -->
-                            </ul>
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-md-6 data">
-                    <div class="row">
-                        <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
-                            <div class="card">
-                                <div class="card-body p-3">
-                                    <div class="row">
-                                        <div class="col-8">
-                                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre d'habitant</p>
-                                            <h5 class="text-sm mb-0 text-capitalize font-weight-bold">value</h5>
-                                        </div>
-                                        <div class="col-4 d-flex justify-content-end">
-                                            <div class="boxIcon">
-                                               <img src="img/svg/people.svg">
-                                            </div>
-                                        </div>
+                <div class="col-md-3 data" data-aos="fade-up" data-aos-duration="800">
+                    <div class="card">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre d'habitant
+                                        (2024)</p>
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">456 229</h5>
+                                </div>
+                                <div class="col-4 d-flex justify-content-end">
+                                    <div class="boxIcon">
+                                        <img src="img/svg/people.svg">
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
-                            <div class="card">
-                                <div class="card-body p-3">
-                                    <div class="row">
-                                        <div class="col-8">
-                                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Valeur du Dollar</p>
-                                            <h5 class="text-sm mb-0 text-capitalize font-weight-bold">value</h5>
-                                        </div>
-                                        <div class="col-4 d-flex justify-content-end">
-                                            <div class="boxIcon">
-                                                <img src="img/svg/currency-exchange.svg">
-                                            </div>
-                                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 data" data-aos="fade-up" data-aos-duration="800">
+                    <div class="card">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Superficie</p>
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">143,1 km²</h5>
+                                </div>
+                                <div class="col-4 d-flex justify-content-end">
+                                    <div class="boxIcon">
+                                        <img src="img/svg/superficie.svg">
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
-                            <div class="card">
-                                <div class="card-body p-3">
-                                    <div class="row">
-                                        <div class="col-8">
-                                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Localisation</p>
-                                            <h5 class="text-sm mb-0 text-capitalize font-weight-bold">Floride, État-Unis</h5>
-                                        </div>
-                                        <div class="col-4 d-flex justify-content-end">
-                                            <div class="boxIcon">
-                                                <img src="img/svg/globe-americas.svg">
-                                            </div>
-                                        </div>
-                                    </div>
+                    </div>
+                </div>
+                <div class="col-md-3 data" data-aos="fade-up" data-aos-duration="800">
+                    <div class="card">
+                        <div class="card-body p-3">
+                            <div class="row">
+                                <div class="col-8">
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold temperature">
+                                        <small>
+                                            <img src="img/svg/arrow-down-solid.svg" alt="">
+                                            <span class="min-temp"></span>
+                                            <span class="separateur"> | </span>
+                                            <span class="max-temp"></span>
+                                            <img src="img/svg/arrow-up-solid.svg" alt="">
+                                        </small>
+                                    </p>
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold"><span
+                                            class="current-temp"></span></h5>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-sm-6 col-xs-12 mb-xl-0 mb-4">
-                            <div class="card">
-                                <div class="card-body p-3">
-                                    <div class="row">
-                                        <div class="col-8">
-                                            <p class="text-sm mb-0 text-capitalize font-weight-bold">Superficie</p>
-                                            <h5 class="text-sm mb-0 text-capitalize font-weight-bold">143,1 km²</h5>
-                                        </div>
-                                        <div class="col-4 d-flex justify-content-end">
-                                            <div class="boxIcon">
-                                               <img src="img/svg/arrows-angle-expand.svg">
-                                            </div>
-                                        </div>
+                                <div class="col-4 d-flex justify-content-end">
+                                    <div class="boxIcon">
+                                        <img class="weather" src="img/svg/weather.svg">
                                     </div>
                                 </div>
                             </div>
@@ -150,11 +127,83 @@
             </div>
         </div>
     </div>
-
+    <div class="main-content">
+        <div class="row d-flex justify-content-center text-center">
+            <h1 class="title" data-aos="fade-up" data-aos-duration="1000">Miami et sa richesse culturelle incomparable !
+            </h1>
+            <p class="iconP" data-aos="fade-up" data-aos-duration="1000">
+                <img src="img/Miami/etats-unis.png" alt="Drapeau USA" class="iconTitle">
+            </p>
+        </div>
+        <div class="container">
+            <div class="row align-items-center justify-content-around">
+                <div class="col-lg-5">
+                    <h1 class="title" data-aos="fade-up" data-aos-duration="1200">Miami Beach</h1>
+                    <p data-aos="fade-up" data-aos-duration="1200">Miami Beach est un véritable paradis tropical où le
+                        soleil ne cesse jamais de briller. Imaginez une
+                        étendue de sable blanc et fin, bordée par des eaux turquoise cristallines qui invitent à la
+                        baignade. C'est un endroit où le glamour et l'énergie vibrante de la vie nocturne se mêlent
+                        harmonieusement à la tranquillité des plages et à la douceur de vivre.</p>
+                    <p data-aos="fade-up" data-aos-duration="1200">Lorsque la nuit tombe, Miami Beach se transforme en
+                        un épicentre de fête. Les clubs de renommée
+                        mondiale attirent des DJs et des célébrités, tandis que les bars sur les toits offrent des vues
+                        imprenables sur l'horizon illuminé de la ville. Vous pourrez danser jusqu'à l'aube sous les
+                        étoiles,
+                        bercé par les rythmes envoûtants de la musique latine et électronique.</p>
+                    <p data-aos="fade-up" data-aos-duration="1200">
+                        <a target="_blank" class="more" href="https://fr.wikipedia.org/wiki/Miami_Beach">Voir plus</a>
+                    </p>
+                </div>
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-6 col-lg-6" data-aos="fade-up" data-aos-duration="1200">
+                            <img src="img/Miami/miamiBeach1.jpg" class="illustration"
+                                alt="Poste des secours de Miami Beach">
+                        </div>
+                        <div class="col-6 col-lg-6 mt-lg-5" data-aos="fade-up" data-aos-duration="1200">
+                            <img src="img/Miami/miamiBeach2.jpg" class="illustration" alt="Vue de haut de Miami Beach">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center justify-content-around">
+                <div class="col-lg-5">
+                    <h1 class="title" data-aos="fade-up" data-aos-duration="1200">EverGlades</h1>
+                    <p data-aos="fade-up" data-aos-duration="1200">Les Everglades sont un écosystème unique et
+                        fascinant, souvent appelé le "Rivière d'herbe". C'est une vaste étendue de marais subtropicaux,
+                        abritant une biodiversité exceptionnelle. Imaginez des eaux tranquilles recouvertes de
+                        végétation luxuriante, où alligators et oiseaux exotiques vivent en harmonie.</p>
+                    <p data-aos="fade-up" data-aos-duration="1200">Explorez ce sanctuaire naturel à bord d'un
+                        hydroglisseur, glissant à travers des prairies inondées et des mangroves mystérieuses. Vous
+                        pourrez observer de près des espèces rares et menacées, comme le lamantin et le panthère de
+                        Floride. Les randonnées et les promenades en canoë offrent également une perspective intime de
+                        ce paysage sauvage.</p>
+                    <p data-aos="fade-up" data-aos-duration="1200">
+                        <a target="_blank" class="more"
+                            href="https://fr.wikipedia.org/wiki/Parc_national_des_Everglades">Voir plus</a>
+                    </p>
+                </div>
+                <div class="col-lg-6">
+                    <div class="row">
+                        <div class="col-6 col-lg-6" data-aos="fade-up" data-aos-duration="1200">
+                            <img src="img/Miami/miamiBeach1.jpg" class="illustration"
+                                alt="Poste des secours de Miami Beach">
+                        </div>
+                        <div class="col-6 col-lg-6 mt-lg-5" data-aos="fade-up" data-aos-duration="1200">
+                            <img src="img/Miami/miamiBeach2.jpg" class="illustration" alt="Vue de haut de Miami Beach">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
 
 <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 <script src="js/parallax.js"></script>
 <script src="js/meteo.js"></script>
-<script src="js/money.js"></script>
+<!-- <script src="js/money.js"></script> -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>AOS.init();</script>
