--- a/Miami.html
+++ b/Miami.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Floride</title>
+    <title>Miami</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/style.responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -51,7 +51,7 @@
                             <div class="row">
                                 <div class="col-8">
                                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Localisation</p>
-                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">Floride, État-Unis
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">Floride, USA
                                     </h5>
                                 </div>
                                 <div class="col-4 d-flex justify-content-end">
@@ -68,8 +68,7 @@
                         <div class="card-body p-3">
                             <div class="row">
                                 <div class="col-8">
-                                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre d'habitant
-                                        (2024)</p>
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre d'habitant</p>
                                     <h5 class="text-sm mb-0 text-capitalize font-weight-bold">456 229</h5>
                                 </div>
                                 <div class="col-4 d-flex justify-content-end">
@@ -268,7 +267,7 @@
 </body>
 
 <footer>
-    <img src="img/footer.png" alt="Image Footer">
+    <img src="img/Miami/footer.png" alt="Image Footer">
     <div class="content-footer">
         <p class="lienFooter">
             <a href="https://thomasl28500.github.io/Portfolio/" target="_blank">
