--- a/Paris.html
+++ b/Paris.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Floride</title>
+    <title>Paris</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/style.responsive.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -51,7 +51,7 @@
                             <div class="row">
                                 <div class="col-8">
                                     <p class="text-sm mb-0 text-capitalize font-weight-bold">Localisation</p>
-                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">Île-de-France, France
+                                    <h5 class="text-sm mb-0 text-capitalize font-weight-bold">Île-de-France, FR
                                     </h5>
                                 </div>
                                 <div class="col-4 d-flex justify-content-end">
@@ -68,8 +68,7 @@
                         <div class="card-body p-3">
                             <div class="row">
                                 <div class="col-8">
-                                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre d'habitant
-                                        (2024)</p>
+                                    <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre d'habitant</p>
                                     <h5 class="text-sm mb-0 text-capitalize font-weight-bold">2,161 millions</h5>
                                 </div>
                                 <div class="col-4 d-flex justify-content-end">
@@ -169,10 +168,10 @@
                 <div class="col-lg-6">
                     <div class="row">
                         <div class="col-6 col-lg-6" data-aos="fade-up" data-aos-duration="1200">
-                            <img src="img/Paris/arcTriomphe1.jpg" class="illustration" alt="Crocodiles">
+                            <img src="img/Paris/arcTriomphe1.jpg" class="illustration" alt="Arc de Triomphe 1">
                         </div>
                         <div class="col-6 col-lg-6 mt-lg-5" data-aos="fade-up" data-aos-duration="1200">
-                            <img src="img/Paris/arcTriomphe2.jpg" class="illustration" alt="Panneau danger !">
+                            <img src="img/Paris/arcTriomphe2.jpg" class="illustration" alt="Arc de Triomphe 2">
                         </div>
                     </div>
                 </div>
@@ -196,7 +195,7 @@
             </div>
         </div>
     </div>
-    <div class="imgParallax Miami">
+    <div class="imgParallax Paris">
         <div class="citation" data-aos="fade-left" data-aos-duration="1200">
             <div class="quote">
                 <img src="img/svg/quote.svg" alt="icon quote">
@@ -206,8 +205,7 @@
     </div>
     <div class="main-content secondContent">
         <div class="row d-flex justify-content-center text-center">
-            <h1 class="title" data-aos="fade-up" data-aos-duration="1000">Miami, un Univers d'Expériences Sans Fin à
-                Explorer
+            <h1 class="title" data-aos="fade-up" data-aos-duration="1000">Paris, un Monument d'Expériences Sans Fin à Explorer...
             </h1>
             <p class="iconP" data-aos="fade-up" data-aos-duration="1000">
                 <img src="img/Miami/iconVoyage.png" alt="Icone de voyage" class="iconTitle">
@@ -218,48 +216,48 @@
         <div class="galerie">
             <div class="grandeImage" data-aos="fade-up" data-aos-duration="1200">
                 <div class="image">
-                    <img src="img/Miami/keyBiscayne.png" alt="Key Biscayne">
+                    <img src="img/Paris/laDefense.jpg" alt="La Défense">
                 </div>
                 <div class="textGalerie">
-                    <h3>Key Biscayne</h3>
-                    <a href="https://fr.wikipedia.org/wiki/Key_Biscayne" target="_blank" class="more">En savoir plus</a>
+                    <h3>La Défense</h3>
+                    <a href="https://fr.wikipedia.org/wiki/La_D%C3%A9fense" target="_blank" class="more">En savoir plus</a>
                 </div>
             </div>
             <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
                 <div class="image">
-                    <img src="img/Miami/artDeco1.jpg" alt="Art Déco Miami">
+                    <img src="img/Paris/louvre.jpg" alt="Le Louvre">
                 </div>
                 <div class="textGalerie">
-                    <h3>Art Déco</h3>
-                    <a href="https://fr.wikipedia.org/wiki/Architecture_Art_d%C3%A9co_de_Miami" target="_blank"
+                    <h3>Le Louvre</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Mus%C3%A9e_du_Louvre" target="_blank"
                         class="more">En savoir plus</a>
                 </div>
             </div>
             <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
                 <div class="image">
-                    <img src="img/Miami/keyWest1.jpg" alt="Key West">
+                    <img src="img/Paris/bateauxMouches.png" alt="Bateaux-Mouches">
                 </div>
                 <div class="textGalerie">
-                    <h3>Key West</h3>
-                    <a href="https://fr.wikipedia.org/wiki/Key_West" target="_blank" class="more">En savoir plus</a>
+                    <h3>Bateaux-Mouches</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Bateau-mouche" target="_blank" class="more">En savoir plus</a>
                 </div>
             </div>
             <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
                 <div class="image">
-                    <img src="img/Miami/southBeach.jpg" alt="South Beach Miami">
+                    <img src="img/Paris/notre-dame.jpg" alt="Notre-Dame de Paris">
                 </div>
                 <div class="textGalerie">
-                    <h3>South Beach - Miami</h3>
-                    <a href="https://fr.wikipedia.org/wiki/South_Beach" target="_blank" class="more">En savoir plus</a>
+                    <h3>Notre-Dame de Paris</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Cath%C3%A9drale_Notre-Dame_de_Paris" target="_blank" class="more">En savoir plus</a>
                 </div>
             </div>
             <div class="midImage" data-aos="fade-up" data-aos-duration="1200">
                 <div class="image">
-                    <img src="img/Miami/wynwood.webp" alt="WynWood Miami">
+                    <img src="img/Paris/sacreCoeur.jpg" alt="Basilique du Sacré-Cœur">
                 </div>
                 <div class="textGalerie">
-                    <h3>WynWood - Miami</h3>
-                    <a href="https://fr.wikipedia.org/wiki/Wynwood" target="_blank" class="more">En savoir plus</a>
+                    <h3>Basilique du Sacré-Cœur</h3>
+                    <a href="https://fr.wikipedia.org/wiki/Basilique_du_Sacr%C3%A9-C%C5%93ur_de_Montmartre" target="_blank" class="more">En savoir plus</a>
                 </div>
             </div>
         </div>
@@ -268,7 +266,7 @@
 </body>
 
 <footer>
-    <img src="img/footer.png" alt="Image Footer">
+    <img src="img/Miami/footer.png" alt="Image Footer">
     <div class="content-footer">
         <p class="lienFooter">
             <a href="https://thomasl28500.github.io/Portfolio/" target="_blank">
