--- a/Accueil.html
+++ b/Accueil.html
@@ -8,12 +8,23 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/style.responsive.css">
     <link rel="stylesheet" href="styles/pop-up.css">
-    <link rel="stylesheet" href="styles/globe.css">
+    <link rel="stylesheet" href="styles/load.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body style="background-color: #f8f9fa;">
+    <div class="loadPage">
+        <div class='planet-container'>
+            <div class='night'></div>
+            <div class='day'></div>
+            <div class='clouds'></div>
+            <div class='inner-shadow'></div>
+        </div>
+        <div class="line-box">
+            <div class="line"></div>
+        </div>
+    </div>
     <header class="hide headerHome" style="background-color: #23282D;">
         <nav class="navAccueil">
             <a href="Accueil.html">
@@ -2477,12 +2488,6 @@
             <circle cx="1798.2" cy="719.3" id="2">
             </circle>
         </svg>
-        <div class='planet-container'>
-            <div class='night'></div>
-            <div class='day'></div>
-            <div class='clouds'></div>
-            <div class='inner-shadow'></div>
-        </div>
     </div>
     <a href="#" class="scrollToTop"><img src="img/svg/circle-up-regular.svg" alt=""></a>
 </body>
@@ -2508,3 +2513,4 @@
 </html>
 
 <script src="js/mapsHome.js"></script>
+<script src="js/loadPage.js"></script>
