--- a/Paris.html
+++ b/Paris.html
@@ -7,6 +7,7 @@
     <title>Paris</title>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/style.responsive.css">
+    <link rel="stylesheet" href="styles/load.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -14,6 +15,17 @@
 </head>
 
 <body style="background-color: #f8f9fa;">
+    <div class="loadPage">
+        <div class='planet-container'>
+            <div class='night'></div>
+            <div class='day'></div>
+            <div class='clouds'></div>
+            <div class='inner-shadow'></div>
+        </div>
+        <div class="line-box">
+            <div class="line"></div>
+        </div>
+    </div>
     <header class="hide">
         <nav>
             <a href="Accueil.html">
@@ -288,5 +300,6 @@
 <script src="js/parallax.js"></script>
 <script src="js/transitionCitation.js"></script>
 <script src="js/meteo.js"></script>
+<script src="js/loadPage.js"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>AOS.init();</script>
